<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/yearMonthLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/daysOfWeekLabel1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/border_mistyrose"
            android:gravity="center_horizontal"
            android:text="@string/sunday"
            android:textColor="@color/red"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/daysOfWeekLabel2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/border_ivory"
            android:gravity="center_horizontal"
            android:text="@string/monday"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/daysOfWeekLabel3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/border_ivory"
            android:gravity="center_horizontal"
            android:text="@string/tuesday"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/daysOfWeekLabel4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/border_ivory"
            android:gravity="center_horizontal"
            android:text="@string/wednesday"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/daysOfWeekLabel5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/border_ivory"
            android:gravity="center_horizontal"
            android:text="@string/thursday"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/daysOfWeekLabel6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/border_ivory"
            android:gravity="center_horizontal"
            android:text="@string/friday"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/daysOfWeekLabel7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/border_lightskyblue"
            android:gravity="center_horizontal"
            android:text="@string/saturday"
            android:textColor="@color/blue"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TableLayout
        android:id="@+id/dateCellTable"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

    </TableLayout>

</LinearLayout>
